Fixing Scrollbar!

--- a/src/main.css
+++ b/src/main.css
@@ -20,3 +20,10 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
+
+
+::-webkit-scrollbar {
+    width: 0.1px;
+}
+
+/* Track */
